--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     <a routerLink="" routerLinkActive="router-link-active" >
         <span class="fa fa-users"></span>
     </a>
-    <a routerLink="/logout" routerLinkActive="router-link-active" >
+    <a routerLink="/authentication/logout" routerLinkActive="router-link-active" >
         <span class="fas fa-sign-out-alt"></span>
     </a>
 </nav>
