--- a/frontend/src/app/components/profil/profil.component.html
+++ b/frontend/src/app/components/profil/profil.component.html
@@ -1,1 +1,16 @@
-<p>profil works!</p>
+<main class="main">
+    <section class="navbar sticky">
+        <app-navbar></app-navbar>
+    </section>
+    <section class="users-list sticky">
+        <app-user-list></app-user-list>
+    </section>
+    <section class="main-content ">
+        <div class="home">
+            <h1>profile</h1>
+        </div>
+    </section>
+        <section class="posts-list sticky">
+    <app-last-posts></app-last-posts>
+    </section>
+</main>
