--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,7 +1,28 @@
-<div class="home">
-    
-    <h1 class="site-title">Groupomania</h1>
-    <div *ngFor="let post of posts">
-        <app-post [post]="post"></app-post>
-    </div>
+<main class="main">
+    <section class="navbar sticky">
+      <app-navbar></app-navbar>
+    </section>
+      <section class="users-list sticky">
+        <app-user-list></app-user-list>
+      </section>
+      <section class="main-content ">
+        <div class="home">
+        
+            <h1 class="site-title">Groupomania</h1>
+            <div class="add-new-post">
+                <img src="{{user.avatar}}" alt="avatar">
+                <input type="text" placeholder="Exprimez vous" (click)="showModal()" id="new-post-input">
+            </div>
+            <div *ngFor="let post of posts">
+                <app-post [post]="post"></app-post>
+            </div>
+        </div>
+      </section>
+      <section class="posts-list sticky">
+        <app-last-posts></app-last-posts>
+      </section>
+    </main>
+
+<div class="modal">
+    <app-new-post></app-new-post>
 </div>
