--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -1,9 +1,11 @@
+
 nav{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    height: 100%;
+    height: 100vh;
+    width: 100%;
     a{
         font-size: 2em;
         color: gray;
