--- a/frontend/src/app/components/post/post.component.html
+++ b/frontend/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
-<article class="post">
+<article class="post" data-id={{postId}}>
     <header class="post__header">
         <div class="post__header-details">
             <img src={{post.avatar}} alt="">
@@ -9,19 +9,19 @@
             </div>
         </div>
         <div class="post__header-action">
-            <span class="fa fa-ellipsis-h"></span>
-            <ul>
-                <li>information</li>
-                <li>modifier</li>
-                <li>supprimer</li>
-                <li>masquer</li>
-                <li>signaler</li>
+            <span class="fa fa-ellipsis-h" (click)="toggleMenu()"></span>
+            <ul class="menu">
+                <li><span class="fa fa-info"></span>Information</li>
+                <li><span class="fa fa-edit"></span>Modifier</li>
+                <li><span class="fa fa-trash"></span>Supprimer</li>
+                <li><span class="fa fa-eye-slash"></span>Masquer</li>
+                <li><span class="fa fa-exclamation-triangle"></span>Signaler</li>
             </ul>
         </div>
     </header>
     <div class="post__body">
-        <p>{{post.description}}</p>
-        <img src={{post.image}} alt={{post.title}} >
+        <div [innerHtml]="post.description"></div>
+        <img *ngIf="!post.image.includes('null')" src={{post.image}} alt={{post.title}} >
     </div>
     <footer class="post__footer">
         <div class="post__footer-actions">
