--- a/frontend/src/app/components/profil/profil.component.scss
+++ b/frontend/src/app/components/profil/profil.component.scss
@@ -41,8 +41,9 @@
 }
 .site-title{
     font-size: 2em;
-    padding: .3em;
+    padding: 1em;
     margin: 0;
+    margin-bottom: 1em;
     color: rgb(97, 97, 97);
     text-transform: uppercase;
     text-align: center;
@@ -50,38 +51,4 @@
     position: sticky;
     top: 0;
     background-color: rgb(250, 249, 249);
-}
-
-.add-new-post{
-    padding: 1em;
-    margin: 1em 0;
-    background-color: rgb(238, 238, 238);
-    display: flex;
-    input{
-        flex: 1;
-        width: 100%;
-        border: 1px solid lightgray;
-        border-radius: 1em;
-        padding-left: 1em;
-    }
-    
-    img{
-        width: 35px;
-        height: 35px;
-        object-fit: cover;
-        border-radius: 50%;
-        margin-right: .5em;
-    }
-}
-
-.modal.show{
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.747);
-    justify-content: center;
-    align-items: center;
-}
-app-navbar{
-    width: 100%;
 }
