--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,19 @@
-<router-outlet></router-outlet>
+<main class="main">
+    <section class="navbar sticky">
+        <app-navbar></app-navbar>
+    </section>
+    <section class="users-list sticky">
+        <app-user-list></app-user-list>
+    </section>
+    <section class="main-content ">
+        <router-outlet></router-outlet>
+       
+    </section>
+    <section class="posts-list sticky">
+        <app-last-posts></app-last-posts>
+    </section>
+</main>
+
+<div class="modal">
+    <app-new-post></app-new-post>
+</div>
