--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -34,3 +34,28 @@
     }
 }
 
+.modal{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #000000da;
+    app-new-post .new-post{
+        width: 50%;
+        height: 50%;
+    }
+}
+
+.modal.show{
+    display: none;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.747);
+    justify-content: center;
+    align-items: center;
+    z-index: 1600;
+}
