--- a/frontend/src/app/components/home/home.component.scss
+++ b/frontend/src/app/components/home/home.component.scss
@@ -18,7 +18,7 @@
         height: 100vh;
     }
     .main-content{
-        background-color: rgb(248, 248, 255);
+        background-color: #DAE0E6;
         height: 100%;
         overflow-y: auto;
     }
@@ -37,7 +37,8 @@
     width: 45%;
     position: relative;
     left: 28%;
-    background-color: rgba(250, 249, 249, 0.74);
+    background-color: #DAE0E6;
+
 }
 .site-title{
     font-size: 2em;
@@ -74,14 +75,7 @@
     }
 }
 
-.modal.show{
-    display: flex;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgba(0, 0, 0, 0.747);
-    justify-content: center;
-    align-items: center;
-}
+
 app-navbar{
     width: 100%;
 }
