--- a/frontend/src/app/components/new-post/new-post.component.html
+++ b/frontend/src/app/components/new-post/new-post.component.html
@@ -1,16 +1,16 @@
 <article class="new-post">
     <header>
         <img src={{user.avatar}} alt="avatar">
-        <span class="fa fa-times" (click)="closeModal($event)"></span>
+        <span class="fa fa-times" (click)="closeModal()"></span>
     </header>
     <div class="alert alert-info mt-2">
-        <span class="fa fa-info-circle"></span>
+        
         <small>
-            Toute publication fera l'objet d'une validation par les modérateurs. <br>
+            <span class="fa fa-info-circle"></span> Toute publication fera l'objet d'une validation par les modérateurs. <br>
             Toute publication qui ne respecte pas <a href="#">les règles du groupes </a> seras supprimé immédiatement.
         </small>
     </div>
-    <form (submit)="savePostForm()" [formGroup]="postgroup">
+    <form [formGroup]="postgroup">
         <input class="title" type="text" formControlName="title" placeholder="Titre ...">
         <ckeditor formControlName="content" ></ckeditor>
         <div class="group">
@@ -22,6 +22,11 @@
                 <img src={{imagepreview}} alt=""><span class="fa fa-times" (click)="deleteImage($event)"></span>
             </div>
         </div>
-        <button class="btn btn-primary" type="submit">Envoyer</button>
+        <div *ngIf="error" class="error">
+            <span class="fa fa-exclamation-triangle"></span> &nbsp;
+            <span>{{error}}</span>
+            <span class="fa fa-smile"></span>
+        </div>
+        <button (click)="savePostForm($event)" class="btn btn-primary" type="submit">Envoyer</button>
     </form>
 </article>
