--- a/frontend/src/app/components/new-post/new-post.component.scss
+++ b/frontend/src/app/components/new-post/new-post.component.scss
@@ -2,6 +2,7 @@
     background-color: #fff;
     border-radius: 1em;
     padding: 1em;
+    width: 40vw;
     header{
         display: flex;
         justify-content: space-between;
@@ -75,13 +76,30 @@
                 padding: .5em;
             }
         }
+        .btn{
+            border: none;
+            background-color:#0084ff;
+            padding: .5em 1em;
+            color: white;
+            cursor: pointer;
+            &:hover{
+                background-color: darken($color: #0084ff, $amount: 20);
+                box-shadow: 0px 2px 5px rgb(119, 119, 119);
+            }
+        }
+        .error{
+            color: gray;
+            font-size: .7em;
+            margin-top: 1em;
+        }
     }
     .alert{
         width: 100%;
         display: flex;
         flex-direction: column;
         small{
-            font-size: .6em;
+            margin-top: 1em;
+            font-size: .7em;
             font-weight: 300;
         }
     }
