--- a/frontend/src/app/components/post/post.component.scss
+++ b/frontend/src/app/components/post/post.component.scss
@@ -3,6 +3,7 @@
     border-radius: .5em;
     box-shadow: 0 0 5px rgb(236, 236, 236);
     margin-bottom: 1em;
+    background-color: #fff;
     .post__header{
         padding: .5em 1em .5em;
         display: flex;
@@ -13,9 +14,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            font-size: .7em;
             img{
-                width: 55px;
-                height: 55px;
+                width: 40px;
+                height: 40px;
                 object-fit: cover;
                 border-radius: 50%;
                 margin-right: .5em;
@@ -67,6 +69,7 @@
         div{
             max-height: 10em;
             padding: .5em;
+            overflow: hidden;
             .h1 strong, h1 strong{
                 font-size: .5em !important;
             }
