--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -44,6 +44,7 @@
     justify-content: center;
     align-items: center;
     background-color: #000000da;
+    z-index: 9999;
     app-new-post .new-post{
         width: 50%;
         height: 50%;
