--- a/frontend/src/app/components/new-post/new-post.component.html
+++ b/frontend/src/app/components/new-post/new-post.component.html
@@ -3,6 +3,7 @@
         <img src={{user.avatar}} alt="avatar">
         <span class="fa fa-times" (click)="closeModal()"></span>
     </header>
+    <h2>Ajouter un post</h2>
     <div class="alert alert-info mt-2">
         
         <small>
